--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 body {
-    background-image: url('./img/p1.jpg') ;
+    background-image: url('p1.jpg') ;
     background-repeat: no-repeat;
     background-size: 100% 100%;
 
